--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,19 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background-color: #f4f4f4;
+    background-color: #98ca96;
     padding: 20px;
 }
+
+#title {
+    font-size: 3em;
+    text-align: center;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3), 
+                 0 0 25px rgba(0, 0, 0, 0.2), 
+                 0 0 5px rgba(0, 0, 0, 0.1);
+}
+
+
 #generator {
     display: flex;
     flex-direction: column;
